# Demo_Multi_App

./: CMakeLists.txt  Qt_QML_UDPMulticast_Architecture.md  build_and_run.bat  main.cpp
ReceiverApp/: CMakeLists.txt  Main.qml  MulticastReceiver.cpp  MulticastReceiver.h  main.cpp
ReceiverApp_2/: CMakeLists.txt  Main.qml  MulticastReceiver.cpp  MulticastReceiver.h  main.cpp
SenderApp/: ARCHITECTURE.md  CMakeLists.txt  CustomFieldModel.cpp  CustomFieldModel.h  Customfield.cpp  Customfield.h  Main.qml  Message.cpp  Message.h  MessageController.cpp  MessageController.h  MulticastSender.cpp  MulticastSender.h  main.cpp
SenderApp/Controller/: MessageController.cpp  MessageController.h
SenderApp/Model/: CustomFieldModel.cpp  CustomFieldModel.h  Message.cpp  Message.h  MessageManager.cpp  MessageManager.h  MulticastSender.cpp  MulticastSender.h  SendWorkerPool.cpp  SendWorkerPool.h
SenderApp/View/: Main.qml
